# vv-dsp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  LICENSE  README.md  simple_bench.c
.github/: PAGES_SETUP.md
.github/instructions/: memory.instructions.md  msvc_compatibility.instructions.md
.github/scripts/: push_benchmark_comment.py
.github/workflows/: ci.yml  docs.yml  release.yml  update-changelog.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt  simd_optimization_analysis.md  vv-dsp-improvement-prd.txt
.taskmaster/docs/profiles/: resample_profile.json
.taskmaster/reports/: task-complexity-report.json  task-complexity-report_dsp-improvements.json
.taskmaster/tasks/: tasks.json
.zencoder/rules/: repo.md
bench/: CMakeLists.txt  bench_accuracy_performance_trade_offs.c  bench_denormals.c  bench_filter.c  bench_filter_fixed.c  bench_framework.c  bench_framework.h  bench_pipeline.c  bench_resample.c  bench_resample_fixed.c  bench_stft.c  bench_timer.c  bench_timer.h  bench_vectorized_math.c  benchmark_simd.c  simple_bench.c  vv_dsp_bench.c
cmake/: vv-dsp-config.cmake.in
docs/: integration.md
docs/profiles/: stft_profile.json
examples/: fastapprox_example.c  filter_example.c  iirfilter_example.cpp
include/vv_dsp/: adapters.h  audio.h  core.h  envelope.h  filter.h  resample.h  spectral.h  vv_dsp.h  vv_dsp_deps.h  vv_dsp_math.h  vv_dsp_types.h  window.h
include/vv_dsp/adapters/: cpp_wrapper.hpp
include/vv_dsp/audio/: wav.h
include/vv_dsp/core/: fp_env.h  nan_policy.h  simd_core.h  simd_utils.h  vv_dsp_vectorized_math.h
include/vv_dsp/envelope/: cepstrum.h  lpc.h  minphase.h
include/vv_dsp/features/: mel.h
include/vv_dsp/filter/: IIRFilter.hpp  common.h  fir.h  iir.h  savgol.h
include/vv_dsp/resample/: interpolate.h  resampler.h
include/vv_dsp/spectral/: czt.h  dct.h  fft.h  hilbert.h  stft.h  utils.h
python/: common.py  test_czt.py  test_dct.py  test_fft.py  test_filters.py  test_framing.py  test_resampler.py  test_stats.py  test_stft.py  tmp_resamp_in.txt
scripts/: generate_changelog.sh
src/adapters/: CMakeLists.txt  adapters.c
src/audio/: CMakeLists.txt  wav.c
src/core/: CMakeLists.txt  core.c  fp_env.c  framing.c  nan_policy.c  simd_core.c  simd_memory.c  stats.c  vv_dsp_vectorized_math.cpp  vv_dsp_vectorized_math_fallback.c
src/envelope/: CMakeLists.txt  cepstrum.c  envelope.c  lpc.c  minphase.c
src/features/: CMakeLists.txt  mel.c
src/filter/: CMakeLists.txt  IIRFilter.cpp  common.c  filter.c  fir.c  iir.c  savgol.c
src/resample/: CMakeLists.txt  interpolate.c  resample.c  resampler.c
src/spectral/: CMakeLists.txt  czt.c  dct.c  fft.c  fft_backend.h  fft_ffts.c  fft_fftw.c  fft_kiss.c  hilbert.c  spectral.c  stft.c  utils.c
src/window/: CMakeLists.txt  window.c
test-custom-registry/: CMakeLists.txt  main.c  vcpkg-configuration.json  vcpkg.json
tests/: CMakeLists.txt  audio_tests.c  bench_fft_simple.c  bench_fft_stft.cpp  core_tests.c  czt_tests.c  dct_tests.c  debug_stft.c  envelope_tests.c  fft_backend_tests.c  filter_tests.c  framing_tests.c  hilbert_tests.c  mfcc_tests.c  resample_tests.c  sanity.c  savgol_basic_func_tests.c  savgol_tests.c  spectral_tests.c  test_IIRFilter.cpp  test_cpp_fft.cpp  test_cpp_iir.cpp  test_cpp_math.cpp  test_cpp_misc.cpp  test_fp_env.c  test_simd_core.c  test_simd_memory.c  test_stft_simple.c  tests_cpp_sanity.cpp  window_tests.c
tests/benchmark/: CMakeLists.txt  bench_fft.cpp  bench_window.cpp
tests/gtest/: CMakeLists.txt  test_fft.cpp  test_stft.cpp  test_window.cpp
tools/: CMakeLists.txt  bench_czt.c  dump_czt.c  dump_dct.c  dump_fft.c  dump_fir.c  dump_fir_coeffs.c  dump_hilbert.c  dump_iir.c  dump_mfcc.c  dump_resample.c  dump_stats.c  dump_stft_roundtrip.c
vcpkg-registry/: README.md  TESTING.md  vcpkg-configuration.json
vcpkg-registry/.github/workflows/: update-baseline.yml
vcpkg-registry/ports/vv-dsp/: portfile.cmake  usage  vcpkg.json
vcpkg-test-consumer/: CMakeLists.txt  main.c
voicebank/: _a'ka'sa_wav.frq  oto.ini
